--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Biochemistry and Molecular Biology  
+  uni: URV
+  year: September, 2014 &mdash; June, 2018
   # awards:
-  # summary:
+  # summary: Bq&Mb URV 2018
